# yaed

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cutedialogs/: CMakeLists.txt
cutedialogs/include/cute/dialogs/: CuteDialogs.hpp  IDialogProvider.hpp  IFileDialog.hpp  core.hpp
cutedialogs/src/: CuteDialogs.cpp  GtkDialogProvider.cpp  GtkDialogProvider.hpp  GtkFileDialog.cpp  GtkFileDialog.hpp  StubDialogProvider.cpp  StubDialogProvider.hpp  StubFileDialog.cpp  StubFileDialog.hpp  Win32DialogProvider.cpp  Win32DialogProvider.hpp  Win32FileDialog.cpp  Win32FileDialog.hpp  core.cpp
cutegl/: CMakeLists.txt
cutegl/include/: IPlatform.hpp  IWindow.hpp  Key.hpp
cutegl/include/cutegl/: IPlatform.hpp
cutegl/src/: IPlatform.cpp  X11Platform.cpp  X11Platform.hpp  X11Window.cpp  X11Window.hpp
cuteshell/: CMakeLists.txt  README.md
cuteshell/cuteshell/: CMakeLists.txt
cuteshell/cuteshell/src/linux/: XdgDialogProvider.hpp  XdgFileDialog.cpp  XdgFileDialog.hpp
cuteshell/cuteshell/src/stub/: CuteShell.cpp  StubFileDialog.hpp
cuteshell/cuteshell/src/win32/: Win32DialogProvider.cpp  Win32DialogProvider.hpp  Win32FileDialog.hpp
cuteshell/cuteshell_sdl2/: CMakeLists.txt
cuteshell/cuteshell_sdl2/src/: sdl2.cpp
cuteshell/include/cute/shell/: CuteShell.hpp  IFileDialog.hpp
cuteshell/src/: CuteShell.cpp  CuteShell_nix.cpp  CuteShell_unknown.cpp  CuteShell_win32.cpp  GtkDialogProvider.cpp  GtkDialogProvider.hpp  GtkFileDialog.cpp  GtkFileDialog.hpp  StubDialogProvider.hpp  StubFileDialog.hpp  Win32DialogProvider.cpp  Win32DialogProvider.hpp  Win32FileDialog.cpp  Win32FileDialog.hpp
cuteshell/src/linux/: CuteShell.cpp  XdgDialogProvider.cpp  XdgFileDialog.cpp  XdgFileDialog.hpp
cuteshell/src/stub/: StubDialogProvider.cpp  StubFileDialog.cpp  StubFileDialog.hpp
cuteshell/src/win32/: Win32DialogProvider.cpp  Win32FileDialog.cpp  Win32FileDialog.hpp
editor/: CMakeLists.txt
editor/data/: 0.thp
editor/data/packs/kids/: 0.thp  1.thp  2.thp  3.thp
editor/data/packs/standard/: 1.thp  2.thp  3.thp
editor/data/sth_renderer/: atlas.json
editor/src/: Editor.cpp  Editor.hpp  EditorApplication.cpp  EditorApplication.hpp  Game.hpp  IWorldExporter.hpp  IWorldImporter.hpp  Layer.cpp  Level.cpp  Level.hpp  NewWorldDialogState.hpp  World.hpp  WorldFormat.cpp  WorldFormatInfo.cpp  main.cpp
editor/src/core/: BaseEditor.cpp  BaseEditor.hpp  BaseWorldExporter.cpp  BaseWorldExporter.hpp  Brush.cpp  Brush.hpp  BrushGroup.cpp  BrushGroup.hpp  GameManager.cpp  GameManager.hpp  ICustomWorldData.hpp  IGame.hpp  ITilemapRenderer.hpp  IWorldExporter.hpp  IWorldFactory.hpp  IWorldImporter.hpp  KnownGame.cpp  KnownGame.hpp  Layer.cpp  Layer.hpp  LayerTemplate.cpp  LayerTemplate.hpp  Level.cpp  Level.hpp  LevelSkin.cpp  LevelSkin.hpp  PaletteTemplate.cpp  PaletteTemplate.hpp  PaletteTemplateBuilder.cpp  PaletteTemplateBuilder.hpp  RecentlyOpenedManager.cpp  RecentlyOpenedManager.hpp  Tilemap.cpp  Tilemap.hpp  TilemapDefs.hpp  UniqueTileAllocator.cpp  UniqueTileAllocator.hpp  UnknownGame.cpp  UnknownGame.hpp  World.cpp  (+8 more)
editor/src/core/export/: BaseWorldExporter.cpp  BaseWorldExporter.hpp  IWorldExporter.hpp
editor/src/core/format/: WorldFormat.cpp  WorldFormat.hpp  WorldFormatInfo.cpp  WorldFormatInfo.hpp  WorldFormatManager.cpp  WorldFormatManager.hpp
editor/src/core/formats/: WorldFormatManager.cpp  WorldFormatManager.hpp
editor/src/core/game/: BaseGame.hpp  GameManager.cpp  GameManager.hpp  IGame.hpp  KnownGame.cpp  KnownGame.hpp  UnknownGame.cpp  UnknownGame.hpp
editor/src/core/games/: GameManager.hpp
editor/src/core/palette/: BasePaletteIconProvider.cpp  BasePaletteIconProvider.hpp  Brush.cpp  Brush.hpp  BrushGroup.cpp  BrushGroup.hpp  BrushSelection.cpp  BrushSelection.hpp  BrushSelectionManager.cpp  BrushSelectionManager.hpp  IPaletteIconProvider.hpp  PaletteIconProviderManager.cpp  PaletteIconProviderManager.hpp  PaletteIconSet.cpp  PaletteIconSet.hpp  PaletteTemplate.cpp  PaletteTemplate.hpp  PaletteTemplateBuilder.cpp  PaletteTemplateBuilder.hpp
editor/src/core/render/: BaseTilemapRenderer.cpp  BaseTilemapRenderer.hpp  ITilemapRenderer.hpp  ITilemapRendererContext.hpp  TilemapRendererManager.cpp  TilemapRendererManager.hpp
editor/src/core/tool/: BaseTool.cpp  BaseTool.hpp  ITool.hpp  PencilTool.cpp  PencilTool.hpp
editor/src/core/util/: CustomDataContainer.cpp  CustomDataContainer.hpp  ICustomData.hpp  Range.hpp  Rect.hpp  StringUtil.cpp  StringUtil.hpp  TextureSlice.cpp  TextureSlice.hpp
editor/src/exporter/: TreasureHunterWorldExporter.cpp  TreasureHunterWorldExporter.hpp
editor/src/exporters/: TreasureHunterWorldExporter.cpp  TreasureHunterWorldExporter.hpp
editor/src/game/: TreasureHunterGame.cpp  TreasureHunterGame.hpp
editor/src/game/sth/: SthGame.cpp  SthGame.hpp  SthInternal.hpp  SthPaletteIconProvider.cpp  SthPaletteIconProvider.hpp  SthWorldExporter.cpp  SthWorldExporter.hpp  SthWorldFactory.cpp  SthWorldFactory.hpp  SthWorldImporter.cpp  SthWorldImporter.hpp  stb_image.c
editor/src/games/: TreasureHunterGame.hpp
editor/src/importer/: TreasureHunterWorldImporter.cpp  TreasureHunterWorldImporter.hpp
editor/src/importers/: TreasureHunterWorldImporter.cpp  TreasureHunterWorldImporter.hpp
editor/src/tool/: BaseVisualTool.cpp  BaseVisualTool.hpp  IVisualTool.hpp  PencilTool.cpp  PencilTool.hpp  VisualPencilTool.cpp  VisualPencilTool.hpp
editor/src/ui/: BaseWindow.cpp  BaseWindow.hpp  IWindow.hpp  ImUtil.cpp  ImUtil.hpp  NewWorldDialog.cpp  NewWorldDialog.hpp  NewWorldDialogState.cpp  NewWorldDialogState.hpp  ToolHandler.cpp  ToolHandler.hpp
editor/src/ui/window/: InspectorWindow.cpp  InspectorWindow.hpp  LayerListWindow.cpp  LayerListWindow.hpp  MinimapWindow.cpp  MinimapWindow.hpp  (+4 more)
editor/src/world_factory/: TreasureHunterWorldFactory.cpp  TreasureHunterWorldFactory.hpp
imgui/: CMakeLists.txt
imgui/include/imgui/: imconfig.h  imgui_impl_opengl3.h  imgui_internal.h  imgui_stdlib.h
imgui/src/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp
(+30 files in other folders)
