project(editor)

add_executable(editor
        src/core/export/BaseWorldExporter.cpp
        src/core/format/WorldFormat.cpp
        src/core/format/WorldFormatInfo.cpp
        src/core/format/WorldFormatManager.cpp
        src/core/game/GameManager.cpp
        src/core/game/KnownGame.cpp
        src/core/game/UnknownGame.cpp
        src/core/palette/BasePaletteIconProvider.cpp
        src/core/palette/Brush.cpp
        src/core/palette/BrushGroup.cpp
        src/core/palette/PaletteIconSet.cpp
        src/core/palette/PaletteTemplate.cpp
        src/core/palette/PaletteTemplateBuilder.cpp
        src/core/render/BaseTilemapRenderer.cpp
        src/core/render/TilemapRendererManager.cpp
        src/core/util/CustomDataContainer.cpp
        src/core/util/TextureSlice.cpp
        src/core/BaseEditor.cpp
        src/core/palette/PaletteIconProviderManager.cpp
        src/core/Layer.cpp
        src/core/LayerTemplate.cpp
        src/core/Level.cpp
        src/core/LevelSkin.cpp
        src/core/Tilemap.cpp
        src/core/World.cpp
        src/core/WorldFactoryManager.cpp
        src/game/sth/SthGame.cpp
        src/game/sth/SthPaletteIconProvider.cpp
        src/game/sth/render/AtlasEntry.cpp
        src/game/sth/render/AtlasPair.cpp
        src/game/sth/render/InputAtlasEntry.cpp
        src/game/sth/render/SthTilemapRenderer.cpp
        src/game/sth/render/SthTilemapRendererContext.cpp
        src/game/sth/render/SthTilemapRendererInternal.cpp
        src/game/sth/SthWorldExporter.cpp
        src/game/sth/SthWorldFactory.cpp
        src/game/sth/SthWorldImporter.cpp
        src/ui/window/InspectorWindow.cpp
        src/ui/window/LayerListWindow.cpp
        src/ui/window/MinimapWindow.cpp
        src/ui/window/PaletteWindow.cpp
        src/ui/window/ViewportWindow.cpp
        src/ui/BaseWindow.cpp
        src/ui/ImUtil.cpp
        src/Editor.cpp
        src/EditorApplication.cpp
        src/main.cpp
        src/RecentlyOpenedManager.cpp)

target_link_libraries(editor PRIVATE fmt glm glfw gl3w imgui stb_image cutedialogs)